kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube
  template:
    metadata:
      labels:
        app: kube
    spec:
      containers:
      - name: kube
        image: midianet/kube:1.0.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
