kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube
spec:
  type: NodePort
  selector:
    app: kube
  ports:
    - port: 8080
