kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kube
          servicePort: 8080
